# test_task

./: README.md
project/: Dockerfile
project/sqlite_project/: CMakeLists.txt
project/sqlite_project/src/: CMakeLists.txt.save
